# sistema

./: .gitignore  ARQUITETURA_1.md  AutomacaoComercial.slnx  CLAUDE.md  DESIGN_1.md  Directory.Build.props  Directory.Packages.props
.claude/: launch.json
src/Cliente/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
src/Cliente/src/: App.tsx
src/Cliente/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src/Cliente/src-tauri/capabilities/: default.json
src/Cliente/src-tauri/src/: main.rs
src/Compartilhado/BuildingBlocks/: AuditoriaDto.cs  BuildingBlocks.csproj  EntidadeBase.cs  FuncionalidadeManifesto.cs  IEventoDominio.cs  IModulo.cs  MigrationRegistry.cs  NaoAuditarAttribute.cs  OperacaoAuditoria.cs  PaginaResultado.cs  Result.cs
src/Hosts/AgenteLocal/: AgenteLocal.csproj  Program.cs  appsettings.json
src/Plataforma/Plataforma.Aplicacao/: Plataforma.Aplicacao.csproj
tests/Acesso.Tests/: Acesso.Tests.csproj  AutenticacaoAppServiceTests.cs  Pbkdf2HashSenhaTests.cs  PerfilTests.cs  RefreshTokenTests.cs  ServicoTokenJwtTests.cs  UsuarioTests.cs  _Fakes.cs
tests/Arquitetura.Tests/: Arquitetura.Tests.csproj  FronteiraTests.cs
tests/Cadastros.Tests/: Cadastros.Tests.csproj  ClienteTests.cs  PessoaTests.cs  ProdutoTests.cs  ServicoTests.cs
tests/Financeiro.Tests/: ContaReceberDominioTests.cs  Financeiro.Tests.csproj  FinanceiroConsultaTests.cs  RenegociacaoDominioTests.cs
tests/Plataforma.Tests/: AuditoriaInterceptorTests.cs  LeitorAuditoriaTests.cs  Plataforma.Tests.csproj
(+195 files in other folders)
