[package]
name = "automacao-comercial"
version = "0.1.0"
description = "Casca desktop do ERP de Automação Comercial"
authors = ["Sioux"]
edition = "2021"

[lib]
name = "automacao_comercial_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
